# adm-stack-inference

./: .gitignore  NOTES.md  README.md  justfile  pyproject.toml
algorithms/: __init__.py  centroid_rec_reduction.py  spherical_kmeans.py
docs/report/: justfile  meta.md
docs/report/src/: 01-intro.md  (+5 more)
networks/: __init__.py  dual_stream_fusion_sequence_aware.py
networks/datasets/: lazy_tokenized_dataset.py  title_body_dataset.py
networks/loss_functions/: __init__.py  asymetrical_loss.py  focal_loss.py
notebooks/: attention-analysis.ipynb  basic-eda.ipynb  embed-cluster.ipynb  embed-tokenizer.ipynb  hierarchical-labeling-results.ipynb  nn-tag-1.ipynb  nn-tag-2.ipynb  nn-topic-crossatt-question-based-tag.ipynb  nn-topic-question-based-tag.ipynb  programmin-langs.txt  questions-analysis.ipynb  questions-xrt-2.ipynb  questions-xrt.ipynb  s2s.ipynb  score-prediction-base.ipynb  score-prediction-enhanced.ipynb  tag-reduction-3.ipynb  tags-work.ipynb  tags-xgb.ipynb  testing.ipynb  tokenized-topic-crossatt.ipynb
notebooks/algorithms/: dual_encoder_matcher.py  text_utils.py  utils.py
notebooks/embedding/: embed-cluster.ipynb  embed-tokenizer.ipynb  repair-embed-tokenizer.ipynb
notebooks/networks/: __init__.py  baseline.py  dual_stream_fusion_crossatt_network.py  dual_stream_fusion_network.py
notebooks/tag-clustering/: hierarchical-labeling-results.ipynb  questions-xrt-2.ipynb  questions-xrt.ipynb  tag-reduction-3.ipynb  tags-work.ipynb
slides/src/: 20-base-predictions.md  25-tag.md  32-tag-prediction.md  36-score-prediction-embeddings.md  bibliography.bib
(+16 files in other folders)
